--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "e2e": "BROWSER=none node scripts/e2e-testing.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -24,6 +25,7 @@
   ],
   "devDependencies": {
     "cypress": "^3.1.5",
-    "eslint-plugin-cypress": "^2.2.0"
+    "eslint-plugin-cypress": "^2.2.0",
+    "tree-kill": "^1.2.1"
   }
 }
