--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "e2e": "BROWSER=none node scripts/e2e-testing.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "verify": "cypress verify"
   },
   "eslintConfig": {
     "extends": "react-app"
